--- a/index.html
+++ b/index.html
@@ -34,6 +34,61 @@
         </div>
     </header>
 
-    
+    <!-- HERO SECTION -->
+    <section class="hero">
+        <div class="hero-inner">
+            <h1>Your Journey, All in One Place</h1>
+            <p>Book rides, flights, trains, and buses seamlessly. Your next adventure starts here.</p>
+
+            <!-- BOOKING CARD -->
+            <div class="booking-card">
+                <!-- Tabs row -->
+                <div class="booking-tabs">
+                    <button class="tab active">
+                        <i class="fa-solid fa-car"></i>
+                        <span>Rides</span>
+                    </button>
+                    <button class="tab">
+                        <i class="fa-solid fa-plane"></i>
+                        <span>Flights</span>
+                    </button>
+                    <button class="tab">
+                        <i class="fa-solid fa-train-subway"></i>
+                        <span>Trains</span>
+                    </button>
+                    <button class="tab">
+                        <i class="fa-solid fa-bus"></i>
+                        <span>Buses</span>
+                    </button>
+                </div>
+
+                <!-- thin grey full line -->
+                <div class="tabs-border"></div>
+                <!-- sirf active ke neeche blue line -->
+                <div class="active-underline"></div>
+
+                <!-- form area -->
+                <form class="booking-form">
+                    <div class="form-group">
+                        <label for="from">From</label>
+                        <input id="from" type="text" placeholder="Nagpur, NGP">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="to">To</label>
+                        <input id="to" type="text" placeholder="Mumbai, BOI">
+                    </div>
+
+                    <button type="submit" class="btn btn-blue search-btn">
+                        Search
+                    </button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!--Container-1-->
+    <div class="Cont1">
+
 </body>
 </html>
