--- a/minal.html
+++ b/minal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallet Dashboard</title>
-    <link rel="stylesheet" href="wallet.css">
+    <link rel="stylesheet" href="minal.css">
     </head>
 <body>
 <nav class="navbar">
